; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ergodone/extr_twimaster.c_i2c_readNak.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ergodone/extr_twimaster.c_i2c_readNak.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TWINT = common dso_local global i32 0, align 4
@TWEN = common dso_local global i32 0, align 4
@TWCR = common dso_local global i32 0, align 4
@TWDR = common dso_local global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i8 @i2c_readNak() #0 {
  %1 = load i32, i32* @TWINT, align 4
  %2 = shl i32 1, %1
  %3 = load i32, i32* @TWEN, align 4
  %4 = shl i32 1, %3
  %5 = or i32 %2, %4
  store i32 %5, i32* @TWCR, align 4
  br label %6

6:                                                ; preds = %13, %0
  %7 = load i32, i32* @TWCR, align 4
  %8 = load i32, i32* @TWINT, align 4
  %9 = shl i32 1, %8
  %10 = and i32 %7, %9
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  br i1 %12, label %13, label %14

13:                                               ; preds = %6
  br label %6

14:                                               ; preds = %6
  %15 = load i8, i8* @TWDR, align 1
  ret i8 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
